# c--openweather-api

./: CMakeLists.txt  README.md
src/: main.cpp
src/api/: weather_api.cpp  weather_api.h
src/models/: weather_data.cpp  weather_data.h
src/utils/: http_client.cpp  http_client.h
tests/: api_tests.cpp  model_tests.cpp
